--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beyond",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,8 @@
     "client": "webpack-dev-server --config ./webpack/dev.config.js",
     "build:dev": "webpack --config ./webpack/dev.config.js",
     "build:prod": "webpack --config ./webpack/prod.config.js",
-    "publish": "rm -rf dist && npm run cpx && tsc"
+    "publish": "rm -rf dist && npm run cpx && tsc && npm run build:prod",
+    "start:prod": "node dist/server/main.js"
   },
   "author": "Shin",
   "license": "MIT",
@@ -22,6 +23,8 @@
     "@types/node": "^11.9.4",
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
+    "@types/react-router": "^4.4.4",
+    "@types/react-router-dom": "^4.3.1",
     "@types/webpack-env": "^1.13.7",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
@@ -34,7 +37,8 @@
     "nodemon": "^1.18.10",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-redux": "^6.0.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.4.0",
     "ts-loader": "^5.3.3",
