--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beyond",
-  "version": "1.0.1",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "author": "Shin",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "@nestjs/common": "^5.7.2",
     "@nestjs/core": "^5.7.2",
     "@types/node": "^11.9.4",
@@ -43,6 +44,7 @@
     "rxjs": "^6.4.0",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.5",
     "webpack-dev-middleware": "^3.6.0",
     "webpack-dev-server": "^3.2.0",
@@ -50,6 +52,9 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "css-loader": "^2.1.0",
+    "image-webpack-loader": "^4.6.0",
+    "style-loader": "^0.23.1",
     "webpack-cli": "^3.2.3"
   }
 }
