--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "compile": "tsc -w -p .",
     "cpx": "cpx \"src/**/*.{css,json,png,svg,html}\" dist",
     "client": "webpack-dev-server --config ./webpack/dev.config.js",
-    "build:dev": "webpack --config ./webpack/dev.config.js",
-    "build:prod": "webpack --config ./webpack/prod.config.js",
+    "build:dev": "rm -rf public && webpack --config ./webpack/dev.config.js",
+    "build:prod": "rm -rf public && webpack --config ./webpack/prod.config.js",
     "publish": "rm -rf dist && npm run cpx && tsc && npm run build:prod",
     "start:prod": "node dist/server/main.js"
   },
@@ -31,6 +31,7 @@
     "cookie-parser": "^1.4.4",
     "cpx": "^1.5.0",
     "express-session": "^1.15.6",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
