--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-ui/core": "^3.9.2",
     "@nestjs/common": "^5.7.2",
     "@nestjs/core": "^5.7.2",
+    "@nestjs/typeorm": "^5.3.0",
     "@types/node": "^11.9.4",
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
@@ -35,6 +36,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
+    "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
     "nodemon": "^1.18.10",
     "react": "^16.8.3",
@@ -44,6 +46,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.4.0",
     "ts-loader": "^5.3.3",
+    "typeorm": "^0.2.15-rc.2",
     "typescript": "^3.3.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.5",
