feat(s): 更改browserHistory成hashHistory，前置需要服务端渲染，更麻烦

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "beyond",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon dist/server/main.js",
@@ -10,9 +10,9 @@
     "compile": "tsc -w -p .",
     "cpx": "cpx \"src/**/*.{css,json,png,svg,html}\" dist",
     "client": "webpack-dev-server --config ./webpack/dev.config.js",
-    "build:dev": "rm -rf public && webpack --config ./webpack/dev.config.js",
-    "build:prod": "rm -rf public && webpack --config ./webpack/prod.config.js",
-    "publish": "rm -rf dist && npm run cpx && tsc && npm run build:prod",
+    "build:dev": "rimraf public && webpack --config ./webpack/dev.config.js",
+    "build:prod": "rimraf public && webpack --config ./webpack/prod.config.js",
+    "publish": "rimraf dist && npm run cpx && tsc && npm run build:prod",
     "start:prod": "node dist/server/main.js"
   },
   "author": "Shin",
@@ -44,6 +44,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^2.6.3",
     "rxjs": "^6.4.0",
     "ts-loader": "^5.3.3",
     "typeorm": "^0.2.15-rc.2",
