--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@nestjs/common": "^5.7.2",
     "@nestjs/core": "^5.7.2",
     "@nestjs/typeorm": "^5.3.0",
+    "@svgr/webpack": "^4.1.0",
     "@types/node": "^11.9.4",
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
     "@types/react-router": "^4.4.4",
     "@types/react-router-dom": "^4.3.1",
     "@types/webpack-env": "^1.13.7",
+    "babel-loader": "^8.0.5",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "cpx": "^1.5.0",
