feat(s): 引入外包svg图片作为icon

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,17 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "launch via npm",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceRoot}",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": [
+        "run-script",
+        "svgr"
+      ]
+    },
+    {
       "name": "Attach to node",
       "type": "node",
       "request": "attach",
