--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "watch": "concurrently \"npm run cpx -- watch\" \"npm run compile\"",
     "compile": "tsc -w -p .",
     "cpx": "cpx \"src/**/*.{css,json,png,svg,html}\" dist",
-    "client": "webpack-dev-server --config ./webpack/dev.config.js",
-    "build:dev": "rimraf public && webpack --config ./webpack/dev.config.js",
-    "build:prod": "rimraf public && webpack --config ./webpack/prod.config.js",
+    "svgr": "svgr -d ./src/client/static/icon  ./src/client/static/icon --ext tsx",
+    "client": "npm run svgr && webpack-dev-server --config ./webpack/dev.config.js",
+    "build:dev": "rimraf public && npm run svgr && webpack --config ./webpack/dev.config.js",
+    "build:prod": "rimraf public && npm run svgr && webpack --config ./webpack/prod.config.js",
     "publish": "rimraf dist && npm run cpx && tsc && npm run build:prod",
     "start:prod": "node dist/server/main.js"
   },
@@ -22,6 +23,7 @@
     "@nestjs/common": "^5.7.2",
     "@nestjs/core": "^5.7.2",
     "@nestjs/typeorm": "^5.3.0",
+    "@svgr/cli": "^4.1.0",
     "@svgr/webpack": "^4.1.0",
     "@types/node": "^11.9.4",
     "@types/react": "^16.8.4",
