--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
     "nodemon": "^1.18.10",
+    "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router": "^4.3.1",
@@ -63,6 +64,8 @@
     "concurrently": "^4.1.0",
     "css-loader": "^2.1.0",
     "image-webpack-loader": "^4.6.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "react-hot-loader": "^4.8.4",
     "style-loader": "^0.23.1",
     "webpack-cli": "^3.2.3"
   }
