--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-jss": "^8.6.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "reflect-metadata": "^0.1.13",
