--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Shin",
   "license": "MIT",
   "dependencies": {
+    "@loadable/component": "^5.9.0",
     "@material-ui/core": "^3.9.2",
     "@nestjs/common": "^5.7.2",
     "@nestjs/core": "^5.7.2",
